# autoLiterature

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  publisher_list.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: precommit.yml
autoliter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autoliterature/: DBLP.py  GoogleScholar.py  Scholarly.py  arxiv.py  autoliter.py  crossref.py  downloads.py  medbiorxiv.py  pdfs.py  utils.py
doc/: autolter_example.ipynb
scr/: autoimage.py  autoliterature.py  autosync.py  metadata_extract.py  modules.py  scihub.py
src/autoliterature/: main.py
